services/grocy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: grocy
  name: grocy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grocy
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grocy
    spec:
      containers:
        - image: grocy/frontend:v3.2.0-0
          name: frontend
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8443
              name: https
          resources: { }
          volumeMounts:
            - mountPath: /var/log/nginx
              name: nginx-logs
            - mountPath: /tmp
              name: tmpfs2
            - name: nginx-common-conf
              mountPath: /etc/nginx/
        - image: grocy/backend:v3.2.0-0
          name: backend
          ports:
            - containerPort: 9000
          resources: { }
          volumeMounts:
            - mountPath: /var/log/php8
              name: logs
            - mountPath: /var/www/data
              name: grocy-data
            - mountPath: /tmp
              name: tmpfs1
      restartPolicy: Always
      volumes:
        - name: logs
          emptyDir:
            sizeLimit: 1Gi
        - name: grocy-data
          persistentVolumeClaim:
            claimName: grocy-data
        - emptyDir:
            medium: Memory
          name: tmpfs1
        - name: nginx-logs
          emptyDir:
            sizeLimit: 1Gi
        - emptyDir:
            medium: Memory
          name: tmpfs2
        - name: nginx-common-conf
          configMap:
            name: nginx-common-conf
            items:
              - key: common.conf
                path: common.conf
