services/grocy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: grocy
  name: grocy
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: https
      port: 8443
      targetPort: https
  selector:
    app.kubernetes.io/name: grocy
